added QueryController
